[project]
name = "crypto-indicator-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "great-tables>=0.11.1",
    "polars>=1.7.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "streamlit>=1.38.0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "ruff>=0.6.6",
    "types-requests>=2.32.0.20240914",
]

[tool.ruff]
extend-select = ["I"]
